openmediavault (7.4.0-1) stable; urgency=low

  * Add StorageDeviceInterface::isHotPluggable() method.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 05 Jul 2024 21:49:41 +0200

openmediavault (7.3.1-1) stable; urgency=low

  * Update locale files.
  * Fix the error of automatic reloading of several dashboard widgets,
    e.g. the system time widget.
  * Fixed a bug in unattended-upgrades that causes all new packages to
    be installed instead of just security updates.
  * Hardening of the quota Salt state to cope with situations where
    there are multiple mount points for a device.
  * Do not activate the IPv6 privacy extension for network interfaces.
    If necessary this can be done individually using `sysctl`.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 29 Jun 2024 18:37:56 +0200

openmediavault (7.3.0-5) stable; urgency=low

  * Update locale files.
  * Refactor the RPC parameter handling.
  * Refactor UI to get rid of `::ng-deep`, which was an obstacle to
    migrating to Angular >= 15.
  * Add `Power Mode` and `Temperature` datatable column to the
    `Storage | Disks` page. Note, the columns are hidden by default.
    If the device is in standby mode, no temperature is displayed.
  * Issue #1774: Improve foundation for plugins.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 11 Jun 2024 17:45:42 +0200

openmediavault (7.2.1-1) stable; urgency=low

  * Refactor the `download.php` RPC infrastructure.
  * Issue #1748: Enable TCP for NFS v2 and v3.
  * Issue #1766: Harden the daily SSL certificate expiration cron job.
  * Issue #1769: Add support for setting SMTP server to `localhost` in
    notification settings page.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 24 May 2024 17:46:40 +0200

openmediavault (7.1.1-1) stable; urgency=low

  * Remove NFS configuration file that is generated on upgrade to
    Debian 12.
  * Issue #1763: Allow creating logical volumes even if a file