@@ -13,6 +13,7 @@ import { PerformanceStatisticNetworkRrdPageComponent } from '~/app/pages/diagnos
 import { PerformanceStatisticUptimeRrdPageComponent } from '~/app/pages/diagnostics/performance-statistics/performance-statistic-uptime-rrd-page.component';
 import { ProcessesTextPageComponent } from '~/app/pages/diagnostics/processes/processes-text-page.component';
 import { ReportTextPageComponent } from '~/app/pages/diagnostics/report/report-text-page.component';
+import { ServiceNfsTextPageComponent } from '~/app/pages/diagnostics/services/service-nfs-text-page.component';
 import { ServiceSmbTextPageComponent } from '~/app/pages/diagnostics/services/service-smb-text-page.component';
 import { ServiceSshTextPageComponent } from '~/app/pages/diagnostics/services/service-ssh-text-page.component';
 import { SystemInformationDatatablePageComponent } from '~/app/pages/diagnostics/system-information/system-information-datatable-page.component';
@@ -104,6 +105,11 @@ const routes: Routes = [
     data: { title: gettext('Services') },
     children: [
       { path: '', component: NavigationPageComponent },
+      {
+        path: 'nfs',
+        component: ServiceNfsTextPageComponent,
+        data: { title: gettext('NFS') }
+      },
       {
         path: 'smb',
         component: ServiceSmbTextPageComponent,
