@@ -12,6 +12,7 @@ import { PerformanceStatisticNetworkRrdPageComponent } from '~/app/pages/diagnos
 import { PerformanceStatisticUptimeRrdPageComponent } from '~/app/pages/diagnostics/performance-statistics/performance-statistic-uptime-rrd-page.component';
 import { ProcessesTextPageComponent } from '~/app/pages/diagnostics/processes/processes-text-page.component';
 import { ReportTextPageComponent } from '~/app/pages/diagnostics/report/report-text-page.component';
+import { ServiceNfsTextPageComponent } from '~/app/pages/diagnostics/services/service-nfs-text-page.component';
 import { ServiceSmbTextPageComponent } from '~/app/pages/diagnostics/services/service-smb-text-page.component';
 import { ServiceSshTextPageComponent } from '~/app/pages/diagnostics/services/service-ssh-text-page.component';
 import { SystemInformationDatatablePageComponent } from '~/app/pages/diagnostics/system-information/system-information-datatable-page.component';
@@ -31,6 +32,7 @@ import { SystemLogsRemoteFormPageComponent } from '~/app/pages/diagnostics/syste
     PerformanceStatisticMemoryRrdPageComponent,
     PerformanceStatisticNetworkRrdPageComponent,
     PerformanceStatisticUptimeRrdPageComponent,
+    ServiceNfsTextPageComponent,
     ServiceSmbTextPageComponent,
     ServiceSshTextPageComponent
   ],
